# rnnoise-windows

rnnoise_dll_test/: rnnoise_dll_test.vcxproj
rnnoise_share/: rnnoise_share.vcxproj
rnnoise_static/: rnnoise_static.vcxproj
rnnoise_training/: rnnoise-training.vcxproj
rnnoise_windows/: Rnnoise-windows.vcxproj
src/: CMakeLists.txt
